--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -46,7 +46,12 @@
     "demo_model_success": "Demo model created successfully",
     "demo_model_error": "Error creating model: {error}",
     "upload_image": "Upload Image",
-    "select_image": "Select leaf image",
+    "select_image": "Upload file",
+    "take_photo": "Use camera",
+    "drag_drop_image": "Drag and drop your image here",
+    "file_help": "Supported formats: JPG, JPEG, PNG. Maximum size: 500MB",
+    "activate_camera": "Activate camera",
+    "camera_instructions": "Take a photo of the leaf",
     "image_loaded": "Image loaded: {filename}",
     "perform_diagnosis": "Perform Comparative Diagnosis",
     "processing_image": "Processing image with multiple AI models...",
