--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -46,7 +46,12 @@
     "demo_model_success": "Modelo de demostración creado exitosamente",
     "demo_model_error": "Error al crear modelo: {error}",
     "upload_image": "Cargar Imagen",
-    "select_image": "Seleccionar imagen de hoja",
+    "select_image": "Subir archivo",
+    "take_photo": "Usar cámara",
+    "drag_drop_image": "Arrastra y suelta tu imagen aquí",
+    "file_help": "Formatos soportados: JPG, JPEG, PNG. Tamaño máximo: 500MB",
+    "activate_camera": "Activar cámara",
+    "camera_instructions": "Toma una foto de la hoja",
     "image_loaded": "Imagen cargada: {filename}",
     "perform_diagnosis": "Realizar Diagnóstico Comparativo",
     "processing_image": "Procesando imagen con múltiples modelos de IA...",
