--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -46,7 +46,12 @@
     "demo_model_success": "Modèle de démonstration créé avec succès",
     "demo_model_error": "Erreur lors de la création du modèle : {error}",
     "upload_image": "Charger une Image",
-    "select_image": "Sélectionner une image de feuille",
+    "select_image": "Télécharger un fichier",
+    "take_photo": "Utiliser la caméra",
+    "drag_drop_image": "Glissez et déposez votre image ici",
+    "file_help": "Formats supportés : JPG, JPEG, PNG. Taille maximale : 500MB",
+    "activate_camera": "Activer la caméra",
+    "camera_instructions": "Prenez une photo de la feuille",
     "image_loaded": "Image chargée : {filename}",
     "perform_diagnosis": "Effectuer un Diagnostic Comparatif",
     "processing_image": "Traitement de l'image avec plusieurs modèles d'IA...",
