--- a/src/translations/pt.json
+++ b/src/translations/pt.json
@@ -46,7 +46,12 @@
     "demo_model_success": "Modelo de demonstração criado com sucesso",
     "demo_model_error": "Erro ao criar modelo: {error}",
     "upload_image": "Carregar Imagem",
-    "select_image": "Selecionar imagem de folha",
+    "select_image": "Enviar arquivo",
+    "take_photo": "Usar câmera",
+    "drag_drop_image": "Arraste e solte sua imagem aqui",
+    "file_help": "Formatos suportados: JPG, JPEG, PNG. Tamanho máximo: 500MB",
+    "activate_camera": "Ativar câmera",
+    "camera_instructions": "Tire uma foto da folha",
     "image_loaded": "Imagem carregada: {filename}",
     "perform_diagnosis": "Realizar Diagnóstico Comparativo",
     "processing_image": "Processando imagem com múltiplos modelos de IA...",
